# pymc_statespace

./: .gitignore  .pre-commit-config.yaml  ARMA Example.ipynb  INPUT.md  Nile Local Level Model.ipynb  README.md  REQUIREMENTS.txt  aesara_ops.py  codecov.yml  kalman_filter.py  local_level_model.py  pyproject.toml  setup.cfg  statespace.py
.github/workflows/: run_tests.yml
.ipynb_checkpoints/: ARMA Example-checkpoint.ipynb
conda_envs/: pymc_statespace.yml
examples/: Custom SSM - Daily Seasonality.ipynb  VARMAX Example.ipynb
pymc_statespace/: __init__.py
pymc_statespace/core/: distributions.py  representation.py  statespace.py
pymc_statespace/filters/: __init__.py  distributions.py  kalman_filter.py  kalman_smoother.py  numpy_filter.py  utilities.py
pymc_statespace/models/: SARIMAX.py  VARMAX.py  local_level.py
pymc_statespace/utils/: aesara_scipy.py  numba_linalg.py  pytensor_scipy.py  simulation.py  solve_discrete_lyapunov.py
tests/: kalman_filter_tests.py  representation_tests.py  statsmodel_local_level.py  test_VARMAX.py  test_kalman_filter.py  test_local_level.py  test_numba_linalg.py  test_pytensor_scipy.py  test_representation.py  test_simulations.py  test_statespace.py
tests/utilities/: test_helpers.py
