[metadata]
name = pymc-statespace
version = 0.0.1
description = A system for Bayesian estimation of state space models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/pymc_statespace
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    pymc>=5.2
    pytensor
    numba>=0.57
    numpy
    pandas
    xarray
    matplotlib
    arviz
    statsmodels

[options.packages.find]
exclude = tests*
